--- a/index.html
+++ b/index.html
@@ -167,10 +167,8 @@
     <div class="badge" aria-live="polite" aria-label="Current status: offline"><span class="dot" aria-hidden="true"></span> Status: offline</div>
 
     <div class="footer">
-      <span>Questions?</span>
-      <a class="mono" href="mailto:support@call-cat.com">support@call-cat.com</a>
-      <span>•</span>
-      <span class="mono" aria-label="Social handle at call cat">@callcat</span>
+      <span>Contact Me</span>
+      <a class="mono" href="mailto:david@call-cat.com">david@call-cat.com</a>
     </div>
   </main>
 
